<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">New Product</string>
    <string name="product_details">Product Detail</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Product</string>
    <string name="delete">Delete</string>
    <string name="order">Order</string>
    <string name="edit">Edit</string>
    <string name="purchaseQuantity">Purchase Quantity</string>
    <string name="sale">Sale</string>
</resources>